<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:srcCompat="@drawable/logo_11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/signup"
        android:textSize="25sp"
        android:fontFamily="@font/nunitobold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
       />
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:drawableStart="@drawable/username_logo"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_textfield"
        android:inputType="textEmailAddress"
        android:drawablePadding="12dp"
        android:hint="@string/username"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="304dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:ems="10"
        android:drawableStart="@drawable/login_email_"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_textfield"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/nunitolight"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="364dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:ems="10"
        android:drawableStart="@drawable/login_password"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_textfield"
        android:inputType="textPassword"
        android:drawablePadding="12dp"
        android:fontFamily="@font/nunitolight"
        android:hint="@string/password"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="424dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="68dp"
        android:text="@string/loginhere"
        app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
        app:layout_constraintHorizontal_bias="0.123"
        android:fontFamily="@font/nunitoregular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/custom_button"
        android:text="@string/signup1"
        android:fontFamily="@font/nunitosemibold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>