<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/result_cv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/endMessageContainer"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:src="@drawable/opps"
            />
        <TextView
            android:id="@+id/endPostMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitoregular"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/PostsEndMsg" />
        <TextView
            android:id="@+id/endPostMsg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitobold"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:text="@string/PostsEndMsg2" />



    </LinearLayout>


    <LinearLayout
    android:id="@+id/productContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
        android:visibility="gone"
    android:weightSum="100"
    android:background="@drawable/custom_post_theme"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/logo_11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/postUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/ExampleText"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="15sp"
                    android:fontFamily="@font/nunitobold"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/postLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/nunitoregular"
                    android:text="@string/ExampleText"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <ImageView
            android:id="@+id/PostImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="96"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_weight="1"
            >
            <TextView

                android:id="@+id/displayUpvotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/Upvotesname"
                android:layout_marginEnd="10dp"
                android:text="@string/zero" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Upvotesname"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nunitoregular"
                android:text="@string/Upvote"
                />
        </RelativeLayout>

        <TableRow
            android:id="@+id/hr"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_weight="2"
       >
        <ImageView
            android:id="@+id/upVote"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:focusable="true"
            android:src="@drawable/ic_outline_upgrade_24" />


        <ImageView

            android:id="@+id/shareBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toEndOf="@+id/upVote"
            android:layout_marginStart="30dp"
            android:focusable="true"
            android:src="@drawable/ic_outline_send_24" />

        <ImageView

            android:id="@+id/saveButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_bookmark_border_24" />



    </RelativeLayout>


</LinearLayout>
</androidx.cardview.widget.CardView>