<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:srcCompat="@drawable/logo_11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/nunitosemibold"
        android:text="@string/login"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />
    <EditText
        android:id="@+id/etUserName"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:ems="10"
        android:drawableStart="@drawable/username_logo"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_textfield"
        android:inputType="textEmailAddress"
        android:drawablePadding="12dp"
        android:hint="@string/username"
        android:fontFamily="@font/nunitolight"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="304dp"
        app:layout_constraintTop_toTopOf="parent"/>



    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:ems="10"
        android:drawableStart="@drawable/login_password"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_textfield"
        android:inputType="textPassword"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:fontFamily="@font/nunitolight"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="364dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="68dp"
        android:text="@string/signuphere"
        android:fontFamily="@font/nunitosemibold"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.123"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:fontFamily="@font/nunitoregular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserPassword" />


    <ImageView
        android:id="@+id/signGooglebtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:focusable="true"
        app:srcCompat="@mipmap/google_logo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>


